# eapo_cpp

./: .gitignore  CMakeLists.txt  build.sh
data/: xsum_sample.jsonl
examples/: config.json  run_example.sh
header/: config.hpp  evaluator.hpp  metrics.hpp  model.hpp  prompts.hpp  tokenizer.hpp  utils.hpp
scripts/: plot_pareto.py
src/: config.cpp  evaluator.cpp  main.cpp  metrics.cpp  model.cpp  search_and_summary.cpp  tokenizer.cpp  utils.cpp
